# media-framework

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: ide.cmake  mf.pc.in  mfConfig.cmake.in  utilities.cmake  utils.cmake  version.rc.in
examples/: CMakeLists.txt
examples/basic_textured_quad/: CMakeLists.txt  main.cpp
examples/basic_vertex_buffer/: CMakeLists.txt  main.cpp
examples/basic_window/: CMakeLists.txt  main.cpp
examples/images/: image.png.hpp
examples/ortho_2d_view/: CMakeLists.txt  main.cpp
examples/shaders/: position_color_vert_dxil.hpp  position_tex_coord_color_matrix_vert_dxil.hpp  position_tex_coord_color_vert_dxil.hpp  solid_color_frag_dxil.hpp  tex_coord_color_frag_dxil.hpp
include/jhoyt/media-framework/: bitflags.hpp  blend_mode.hpp  color.hpp  colorspace.hpp  context.hpp  display.hpp  display_properties.hpp  fcolor.hpp  flip_mode.hpp  fpoint.hpp  frect.hpp  media_framework.hpp  mf.hpp  palette.hpp  pixel_format.hpp  point.hpp  properties.hpp  rect.hpp  rgb.hpp  scale_mode.hpp  size.hpp  subsystem.hpp  surface.hpp  surface_properties.hpp  version.hpp  window.hpp  window_create_properties.hpp  window_flags.hpp  window_properties.hpp
include/jhoyt/mf/: bit_flags.hpp  color.hpp  context.hpp  fwd.hpp  mf.hpp  pixel_format.hpp  size.hpp  surface.hpp  version.hpp  window.hpp
include/jhoyt/mf/event/: handler.hpp  run_loop.hpp
include/jhoyt/mf/gpu/: blend_factor.hpp  blend_op.hpp  blend_state.hpp  buffer.hpp  buffer_usage.hpp  color_component.hpp  command_buffer.hpp  compare_op.hpp  copy_pass.hpp  device.hpp  filter.hpp  graphics_pipeline.hpp  graphics_pipeline_descriptor.hpp  index_element_size.hpp  primitive_type.hpp  render_pass.hpp  sampler.hpp  sampler_address_mode.hpp  sampler_mipmap_mode.hpp  sampler_options.hpp  shader.hpp  shader_format.hpp  shader_options.hpp  shader_stage.hpp  texture.hpp  texture_format.hpp  texture_type.hpp  texture_usage.hpp  transfer_buffer.hpp  transfer_buffer_usage.hpp  vertex_element_format.hpp  vertex_input_rate.hpp
include/jhoyt/mf/util/: matrix4x4.hpp
src/: blend_mode.cpp  context.cpp  display.cpp  display_properties.cpp  palette.cpp  properties.cpp  surface.cpp  window.cpp  window_create_properties.cpp  window_properties.cpp
src/event/: handler.cpp  run_loop.cpp
src/gpu/: buffer.cpp  command_buffer.cpp  copy_pass.cpp  device.cpp  graphics_pipeline.cpp  graphics_pipeline_descriptor.cpp  render_pass.cpp  sampler.cpp  shader.cpp  texture.cpp  transfer_buffer.cpp
src/util/: matrix4x4.cpp
